fix site being too wide for phones

--- a/app/frontend/src/components/DBFilters.css
+++ b/app/frontend/src/components/DBFilters.css
@@ -65,10 +65,6 @@
   align-items: center;
 }
 
-.date-range-separator, .rating-range-separator {
-  margin: 0 10px;
-}
-
 .date-input, .rating-input {
   width: 150px;
 }
