--- a/app/frontend/src/components/Navbar.css
+++ b/app/frontend/src/components/Navbar.css
@@ -2,7 +2,12 @@ h1.navbar-item {
   font-size: 1.5em;
   font-weight: bold;
   color: #333;
-  margin-right: 80px;
+}
+
+@media screen and (min-width: 1024px) {
+  h1.navbar-item {
+    margin-right: 80px;
+  }
 }
 
 .navbar-item.logo {
